project2/test/test_11710204_8.spl
struct Apple{
    int price;
};
int test_11710204_8()
{
  int a = 2;
  struct Apple apple;
  apple.price = a;
  return apple;
}
